[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "metallurgy/_version.py"

[tool.black]
line-length = 79

[tool.pytest.ini_options]
addopts = [
    "--cov=metallurgy",
    "--cov-report=term-missing"
]
testpaths = [
    "tests",
]

# [tool.mypy]
# mypy_path = "metallurgy"
# plugins = numpy.typing.mypy_plugin
# check_untyped_defs = true
# disallow_any_generics = true
# ignore_missing_imports = true
# no_implicit_optional = true
# show_error_codes = true
# strict_equality = true
# warn_redundant_casts = true
# warn_return_any = true
# warn_unreachable = true
# warn_unused_configs = true
# no_implicit_reexport = true
