[metadata]
name = metallurgy
author = Robert Forrest
author_email = robertforrest@live.com
description = Calculates approximate properties of alloy compositions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Robert-Forrest/metallurgy
license = BSD 3-Clause License
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = metallurgy
python_requires = >=3.7
install_requires =
    pandas
    elementy
    cerebral
    matplotlib
    python-ternary
    bokeh

[options.entry_points]
console_scripts =
    # exename = package.module:funcname

[options.extras_require]
dev =
    pre-commit
    black
    tox ==3.24.3
    pytest ==6.2.5
    pytest-cov ==2.12.1

[options.package_data]
metallurgy = py.typed
